# copilot-money-cli

./: .editorconfig  CLAUDE.md  Cargo.toml  README.md  renovate.json  ruff.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
graphql/: ExcludeTransactionFromRecurring.graphql
scripts/: setup-dev.sh  update-coverage.sh
src/: client.rs  lib.rs  main.rs  ops.rs  schema_gen.rs  types.rs
src/cli/: auth.rs  budgets.rs  categories.rs  mod.rs  recurrings.rs
tests/: cli_snapshots.rs  client_http.rs
tests/fixtures/graphql/: ExcludeTransactionFromRecurring.json  Transactions.json
tests/snapshots/: cli_snapshots__transactions_clear_recurring_table_snapshot.snap  cli_snapshots__transactions_list_json_page_info_snapshot.snap  cli_snapshots__transactions_list_json_snapshot.snap
tools/: capture_graphql_ops.py  get_token.py  test_get_token.py
