[package]
name = "copilot-money-cli"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
default-run = "copilot"
license = "MIT"
description = "Unofficial CLI client for Copilot Money"
readme = "README.md"
keywords = ["copilot", "graphql", "finance"]
categories = ["command-line-utilities"]
include = [
  "src/**",
  "tests/**",
  "graphql/**",
  "schema/**",
  "docs/**",
  "scripts/**",
  "tools/**",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "Cargo.toml",
  "Cargo.lock",
]
repository = "https://github.com/JaviSoto/copilot-money-cli"
publish = true
[[bin]]
name = "copilot"
path = "src/main.rs"

[[bin]]
name = "schema-gen"
path = "src/bin/schema_gen.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive", "env"] }
comfy-table = "7.2.1"
graphql-parser = "0.4.1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rpassword = "7.4.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
terminal_size = "0.4.3"
unicode-width = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.2"
predicates = "3.1.3"
tempfile = "3.23.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Speed up snapshot diffing when running `cargo test` in dev profile.
# https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[lints.rust]
# unsafe_code is forbidden via #![forbid(unsafe_code)] on each crate root (main.rs,
# lib.rs, bin/schema_gen.rs). Per-file scoping (instead of a crate-wide lint) lets
# tests still use unsafe blocks — Rust 2024 made std::env::set_var unsafe.
unused_must_use = "deny"
unused_imports = "deny"
unused_variables = "deny"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# Group-level opt-ins (priority = -1 so specific allows below can override).
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Individually selected restriction lints (never enable the group — lints conflict).
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
mem_forget = "warn"

# -------- Allowed pedantic lints (legitimately inapplicable to this project) --------
# This is a CLI binary that prints user-facing output; errors go to stderr. Library
# callers of the crate do not rely on silent behavior.
module_name_repetitions = "allow"
# clap `Args` structs legitimately hold many bool flags (one per CLI toggle).
struct_excessive_bools = "allow"
# We do not guarantee MSRV-compat for internal helpers across every pub fn.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `#[must_use]` on every builder-ish getter is noise for a CLI.
must_use_candidate = "allow"
result_large_err = "allow"
